@@ -64,7 +64,7 @@ int RegisterKismetSources(Packetsourcetracker *sourcetracker) {
                                        pcapsource_wext_registrant,
                                        monitor_vtar5k, NULL, chancontrol_wext);
 
-    sourcetracker->RegisterPacketsource("madwifi_a", 1, "IEEE80211a", 6,
+    sourcetracker->RegisterPacketsource("madwifi_a", 1, "IEEE80211a", 36,
                                         pcapsource_wext_registrant,
                                         monitor_madwifi_a, NULL, chancontrol_wext);
     sourcetracker->RegisterPacketsource("madwifi_b", 1, "IEEE80211b", 6,
@@ -75,10 +75,12 @@ int RegisterKismetSources(Packetsourcetracker *sourcetracker) {
                                         monitor_madwifi_g, NULL, chancontrol_wext);
     sourcetracker->RegisterPacketsource("madwifi_ab", 1, "IEEE80211ab", 6,
                                         pcapsource_wext_registrant,
-                                        monitor_madwifi_comb, NULL, chancontrol_wext);
+                                        monitor_madwifi_comb, NULL, 
+                                        chancontrol_madwifi_ab);
     sourcetracker->RegisterPacketsource("madwifi_ag", 1, "IEEE80211ab", 6,
                                         pcapsource_madwifig_registrant,
-                                        monitor_madwifi_comb, NULL, chancontrol_wext);
+                                        monitor_madwifi_comb, NULL, 
+                                        chancontrol_madwifi_ag);
 #else
     // Register the linuxwireless pcap stuff as null
     REG_EMPTY_CARD(sourcetracker, "cisco");
