@@ -865,6 +865,34 @@ int chancontrol_orinoco(const char *in_dev, int in_ch, char *in_err, void *in_ex
     
     return 0;
 }
+
+// Madwifi needs to change modes accordinly
+int chancontrol_madwifi_ab(const char *in_dev, int in_ch, char *in_err, void *in_ext) {
+    if (in_ch > 0 && in_ch <= 14) {
+        if (Iwconfig_Set_IntPriv(in_dev, "mode", 2, 0, in_err) < 0)
+            return -1;
+    } else {
+        if (Iwconfig_Set_IntPriv(in_dev, "mode", 1, 0, in_err) < 0)
+            return -1;
+    }
+
+    return chancontrol_wext(in_dev, in_ch, in_err, in_ext);
+}
+
+int chancontrol_madwifi_ag(const char *in_dev, int in_ch, char *in_err, void *in_ext) {
+    if (in_ch > 0 && in_ch <= 14) {
+        if (Iwconfig_Set_IntPriv(in_dev, "mode", 3, 0, in_err) < 0)
+            return -1;
+    } else {
+        if (Iwconfig_Set_IntPriv(in_dev, "mode", 1, 0, in_err) < 0)
+            return -1;
+    }
+
+    return chancontrol_wext(in_dev, in_ch, in_err, in_ext);
+}
+
+
+
 #endif
 
 #ifdef SYS_LINUX
